--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*https://codepen.io/rafaelcastrocouto/pen/BNdOab - The css title is credited by Rafael Castrocouto */
+
 body {
   font: "Raleway", sans-serif;
   color: rgba(0, 0, 0, 0.5);
