--- a/style.css
+++ b/style.css
@@ -30,7 +30,13 @@ body {
     -3px -3px 0 firebrick, -4px -4px 0 firebrick, -5px -5px 0 firebrick,
     -6px -6px 0 firebrick, -7px -7px 0 firebrick, -8px -8px 0 firebrick,
     -30px 20px 40px dimgrey;
-}
+  @media only screen and (max-width:600px) {
+    font-size: 2.2rem;
+  }
+ }
+
+
+
 .done {
   text-decoration: line-through;
 }
