--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 }
 
 body {
+  height: 100vh;
+  width: 100%;
   font: "Raleway", sans-serif;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
@@ -18,7 +20,7 @@ body {
 .coolTitle {
   text-align: center;
   font-family: "Oswald", Helvetica, sans-serif;
-  font-size: 4rem;
+  font-size: 4.5rem;
   transform: skewY(-10deg);
   letter-spacing: 4px;
   word-spacing: -8px;
@@ -31,7 +33,7 @@ body {
     -30px 20px 40px dimgrey;
 
   @media only screen and (max-width: 600px) {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 }
 .done {
@@ -39,7 +41,7 @@ body {
 }
 
 h1 {
-  font: 600 3em "Raleway", sans-serif;
+  font: 600 3rem "Raleway", sans-serif;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
   text-transform: uppercase;
@@ -47,19 +49,19 @@ h1 {
   width: 100%;
 
   @media only screen and (max-width: 600px) {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
 h2 {
-  font: 600 2.4em "Raleway", sans-serif;
+  font: 600 2.5rem "Raleway", sans-serif;
   @media only screen and (max-width: 600px) {
     font-size: 1rem;
   }
 }
 
 h3 {
-  font: 900 1em "Raleway", sans-serif;
+  font: 900 1rem "Raleway", sans-serif;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
   text-transform: none;
